app/styles/app.css
@font-face {
  font-family: 'Moulin';
  src: url('../assets/Moulin-Light.woff') format('woff');
  font-weight: normal;
  font-style: normal;
}

.moderat-bold {
  font-family: 'Moulin', sans-serif;
  font-weight: bold;
  text-transform: uppercase;
}

:root {
  --aside-width: 400px;
  --cart-aside-summary-height-with-discount: 300px;
  --cart-aside-summary-height: 250px;
  --grid-item-width: 355px;
  --header-height: 64px;
  --color-dark: #000;
  --color-light: #fff;
}

.background {
  background-color: #DCB243;
  height: 100vh;
  display: flex;
  flex-direction: column;
}

.main-area {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 12px;
}

.responsive-icon {
  width: 120px;
}

@media (max-width: 640px) {
  .responsive-icon {
    width: 100px;
  }
}

.responsive-logo {
  width: 250px;
}

@media (max-width: 640px) {
  .responsive-logo {
    width: 225px;
  }
}

.hide-scrollbar {
  /* For Firefox */
  scrollbar-width: none;
  -ms-overflow-style: none;

  /* For IE and Edge */
}

.underline-important {
  text-decoration: underline !important;
}

.hide-scrollbar::-webkit-scrollbar {
  display: none;
  -webkit-appearance: none;
  /* For Chrome, Safari, and Opera */
}

.a-button {
  font-size: 12px;
  font-weight: 600;
  line-height: 14px;
  letter-spacing: 1px;
  text-transform: uppercase;
}

.above-footer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 14px;
  padding: 12px;

}

.footer-area {
  padding: 12px 0;
  display: flex;
  gap: 12px;
  justify-content: center;
  align-items: center;
  background-color: #FFFAE1;
  width: 100%;
}

.footer-button {
  background-color: #DCB243;
  border-radius: 4px;
  padding: 4px 24px;
  border: 0;
}

.h3-desktop {
  font-size: 28px;
  font-weight: 800;
  line-height: 30px;
  letter-spacing: 0;
  text-transform: uppercase;
}

.footer-input {
  padding: 4px 12px;
  width: 250px;
  border: 0;
  margin: 0;
}

.sign-up-text {
  font-size: 14px;
}

@media (max-width: 820px) {
  .logo {
    width: 95% !important;
  }

  .footer-area {
    background-color: #FFFAE1;
    width: 100%;
    display: flex;
    flex-direction: column;
    height: auto;
    padding: 8px 0;
  }

  .sign-up-text {
    font-size: 8px;
    text-align: center;
  }

  .above-footer {
    padding: 0 12px;
  }
}

/*
* --------------------------------------------------
* Non anchor links
* --------------------------------------------------
*/
.link:hover {
  text-decoration: underline;
  cursor: pointer;
}

/*
* --------------------------------------------------
* components/Aside
* --------------------------------------------------
*/
aside {
  background: var(--color-light);
  box-shadow: 0 0 50px rgba(0, 0, 0, 0.3);
  height: 100vh;
  max-width: var(--aside-width);
  min-width: var(--aside-width);
  position: fixed;
  right: calc(-1 * var(--aside-width));
  top: 0;
  transition: transform 200ms ease-in-out;
}
.h3-desktop {
  font-size: 28px;
  font-weight: 800;
  line-height: 30px;
  letter-spacing: 0;
}
.h1-desktop {
  font-size: 46px;
  font-weight: 800;
  line-height: 48px;
  letter-spacing: -1px;
  text-transform: uppercase;
}

.h2-desktop {
  font-size: 36px;
  font-weight: 800;
  line-height: 38px;
  letter-spacing: -1px;
  text-transform: uppercase;
}

.h3-desktop {
  font-size: 28px;
  font-weight: 800;
  line-height: 30px;
  letter-spacing: 0;
}

.h4-desktop {
  font-size: 24px;
  font-weight: 700;
  line-height: 26px;
  letter-spacing: 1px;
  text-transform: uppercase;
}

.h5-desktop {
  font-size: 22px;
  font-weight: 700;
  line-height: 24px;
  letter-spacing: 1px;
  text-transform: uppercase;
}

.h6-desktop {
  font-size: 20px;
  font-weight: 700;
  line-height: 22px;
  letter-spacing: 1px;
  text-transform: uppercase;
}

.p-large-desktop {
  font-size: 18px;
  font-weight: 700;
  line-height: 20px;
  letter-spacing: .25px;
}

.p-standard-bold-desktop {
  font-size: 16px;
  font-weight: 700;
  line-height: 20px;
  letter-spacing: .25px;
}

.p-standard-medium-desktop {
  font-size: 16px;
  font-weight: 500;
  line-height: 20px;
  letter-spacing: .25px;
}

.p-small-bold-desktop {
  font-size: 14px;
  font-weight: 700;
  line-height: 18px;
  letter-spacing: .25px;
}

.p-small-semi-bold-desktop {
  font-size: 14px;
  font-weight: 600;
  line-height: 18px;
  letter-spacing: .25px;
}

.p-small-regular-desktop {
  font-size: 14px;
  font-weight: 400;
  line-height: 18px;
  letter-spacing: .25px;

}

.p-xs-small-semi-bold-desktop {
  font-size: 10px;
  font-weight: 500;
  line-height: 14px;
  letter-spacing: 0px;

}

.a-button {
  font-size: 12px;
  font-weight: 600;
  line-height: 14px;
  letter-spacing: 1px;
  text-transform: uppercase;
}

.label-desktop {
  font-size: 12px;
  font-weight: 600;
  font-optical-sizing: auto;
  font-style: normal;
  line-height: 14px;
  letter-spacing: 1px;
  text-transform: uppercase;
}

.label-desktop-bold {
  font-size: 12px;
  font-weight: 700;
  font-optical-sizing: auto;
  font-style: normal;
  line-height: 14px;
  letter-spacing: 1px;
  text-transform: uppercase;
}

.h1-mobile {
  font-size: 26px;
  font-weight: 700;
  font-optical-sizing: auto;
  font-style: normal;
  line-height: 28px;
  letter-spacing: 0px;
  text-transform: uppercase;
}

.h2-mobile {
  font-size: 24px;
  font-weight: 700;
  font-optical-sizing: auto;
  font-style: normal;
  line-height: 26px;
  letter-spacing: 0px;
  text-transform: uppercase;
}

.h3-mobile {
  font-size: 22px;
  font-weight: 700;
  font-optical-sizing: auto;
  font-style: normal;
  line-height: 24px;
  letter-spacing: 0px;
}

.h4-mobile {
  font-size: 20px;
  font-weight: 700;
  font-optical-sizing: auto;
  font-style: normal;
  line-height: 24px;
  letter-spacing: 0px;
  text-transform: uppercase;
}

.h5-mobile {
  font-size: 18px;
  font-weight: 700;
  font-optical-sizing: auto;
  font-style: normal;
  line-height: 20px;
  letter-spacing: 0px;
  text-transform: uppercase;
}
/* ... */

